pipelines: update syntax

--- a/.github/workflows/on-demand_molecule.yml
+++ b/.github/workflows/on-demand_molecule.yml
@@ -14,6 +14,7 @@
 # limitations under the License.
 
 name: Check All Molecule tests
+description: 'Ansible Molecule test execution'
 # yamllint disable-line rule:truthy
 on:
   push:
