--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -179,7 +179,7 @@ jobs:
       - name: build cosmovisor binary
         if: ${{ !matrix.cosmovisor }}
         run: |
-          go install github.com/cosmos/cosmos-sdk/cosmovisor/cmd/cosmovisor@v1.0.0
+          go install cosmossdk.io/tools/cosmovisor/cmd/cosmovisor@v1.5.0
         shell: bash
 
       - name: get GOBIN
