--- a/integration_tests/deploy/Dockerfile-build
+++ b/integration_tests/deploy/Dockerfile-build
@@ -35,4 +35,4 @@ ARG DCL_VERSION
 ARG DCL_COMMIT
 RUN LEDGER_ENABLED=false make
 
-RUN go install github.com/cosmos/cosmos-sdk/cosmovisor/cmd/cosmovisor@v1.3.0
+RUN go install cosmossdk.io/tools/cosmovisor/cmd/cosmovisor@v1.5.0
