enable manual action for molecule, fix molecule tests

--- a/.github/workflows/on-demand_molecule.yml
+++ b/.github/workflows/on-demand_molecule.yml
@@ -28,7 +28,10 @@ on:
     paths:
       - deployment/test-requirements.txt
       - deployment/ansible/roles/**
-
+  workflow_dispatch:
+    paths:
+      - deployment/test-requirements.txt
+      - deployment/ansible/roles/**
 jobs:
   changes:
     runs-on: ubuntu-latest
