--- a/deployment/ansible/inventory/group_vars/all.yml
+++ b/deployment/ansible/inventory/group_vars/all.yml
@@ -13,7 +13,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
+accounts:
+  - name: genesis-account-key
+    passphrase: password123
+    roles:
+      - NodeAdmin
+      - Trustee
 chain_id: testnet-2.0
 company_name: CSA
 type_name: "" # "ON", "Priv-SN", "Pub-SN", "SeedN" or "VN"
@@ -24,7 +29,6 @@ dcld:
   version: "{{ dcl_version }}"
   path: "{{ dcl_home }}/cosmovisor/genesis/bin/dcld"
 cosmovisor:
-  version: "{{ dcl_version }}"
   user: cosmovisor
   group: dcl
   path: /usr/bin/cosmovisor
@@ -39,14 +43,8 @@ dcld_checksums:
   0.8.0: eae8e20cbe7c9fc1e090aa8ab358afdf2044636911d75c2284f733e33f0acaab
   0.7.0: 50708d4f7e00da347d4e678bf26780cd424232461c4bb414f72391c75e39545a
   0.6.0: 1ab6b9084fc0444858307f13b708d9f275d548dd2cfb3bc7d8e10d59897d7278
-cosmovisor_checksums:
-  0.12.0: eae97a7207b5747dca9614e7b7ec478a4cc559669ad716b142dd5a2bc2266881
-  0.11.0: 05bf568e34a7c92a61f268401a9f1d6df3c3f015e884a239da5d35c299da6adb
-  0.10.0: 6dac8f0e0267bd930be91c6f3369eb9c35a649546ea071b223a7c8c00203d26a
-  0.9.0: c05705efe5369b9d83e65ef7b252bd7c610eec414ae3f6c08681bcf49dc38e6d
-  0.8.0: c05705efe5369b9d83e65ef7b252bd7c610eec414ae3f6c08681bcf49dc38e6d
 
 dcld_download_url: "https://github.com/zigbee-alliance/distributed-compliance-ledger/releases/download/v{{ dcld.version }}/dcld"
 dcld_binary_checksum: "sha256:{{ dcld_checksums[dcld.version] }}"
-cosmovisor_download_url: "https://github.com/zigbee-alliance/distributed-compliance-ledger/releases/download/v{{ cosmovisor.version }}/cosmovisor"
-cosmovisor_binary_checksum: "sha256:{{ cosmovisor_checksums[cosmovisor.version] }}"
+cosmovisor_download_url: "https://github.com/Shadowsasha/artifactory/raw/5c15b53d3acc3999e115ba8b21f044f940533841/cosmovisor"
+cosmovisor_binary_checksum: "sha256:60773e929dac163538a55e74c1b9a02d0d6c509443a9b81b2ce772e6cbaf7885"
