--- a/deployment/ansible/roles/configure/molecule/default/molecule.yml
+++ b/deployment/ansible/roles/configure/molecule/default/molecule.yml
@@ -26,13 +26,15 @@ platforms:
   - name: node0
     image: geerlingguy/docker-ubuntu2004-ansible:latest
     pre_build_image: true
+    privileged: true
+    cgroupns_mode: host
     command: /sbin/init
     tmpfs:
       - /run
       - /tmp
       - /run/lock
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - validators
   - name: node1
@@ -44,7 +46,7 @@ platforms:
       - /tmp
       - /run/lock
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - private_sentries
   - name: node2
@@ -56,7 +58,7 @@ platforms:
       - /tmp
       - /run/lock
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - observers
   - name: node3
@@ -68,7 +70,7 @@ platforms:
       - /tmp
       - /run/lock
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - public_sentries
   - name: node4
@@ -80,12 +82,14 @@ platforms:
       - /tmp
       - /run/lock
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - seeds
 provisioner:
   name: ansible
   inventory:
+    links:
+      group_vars: ../../../../inventory/group_vars
     group_vars:
       all:
         chain_id: test-net
